# local-ai-work-agent-template

./: logger.py  main.py  pyproject.toml  test.py
app/: agent.py  config.py
app/prompts/: communication_triage_format.json  communication_triage_prompt.md  strict_json_system_prompt.md
processors/: communication_summary_processor.py
processors/prompts/: communication_triage_format.json  communication_triage_prompt.md  strict_json_system_prompt.md
tests/: test_agent.py  test_ollama_conexion.py
utils/: llm.py
